docs/css/index.css
/* ... */
@supports (selector(::view-transition)) {
  .support.view-transition {
    display: none;
  }
}

@container not style(--theme: light) {
  .support.style-query {
    display: none;
  }
}

.support {
  background-color: var(--base-color);
  border-inline-start: 0.5rem solid var(--shadow);
  color: var(--base-color);
  border-radius: 0.5rem;
  padding: 1em 2em;
}

::view-transition {
  background: var(--base-color);
}
::view-transition-image-pair(root) {
  perspective: 2500px;
  perspective-origin: center;
  transform-style: preserve-3d;
  transform-origin: 50% 50% 100dvw;
  filter: drop-shadow(0px 0px 6px hsl(165deg 11% 3%)) drop-shadow(0px 0px 25px hsl(165deg 11% 3%/50%));
}
::view-transition-old(root),
::view-transition-new(root) {
  animation: 1.5s linear(0,
      0.324 9.1%,
      0.584 18.6%,
      0.782 28.6%,
      0.858 33.8%,
      0.92 39.2%,
      0.997 49.5%,
      1.021 55.1%,
      1.033 61%,
      1.035 71.7%,
      1);
  transform-style: preserve-3d;
  transform-origin: 50% 50% 0;
  /*   perspective: 800px; */
  transform: translateZ(-50vw) scale(var(--scale)) rotatey(var(--rotation)) translatez(50vw);
  backface-visibility: hidden;
}
::view-transition-old(root) {
  animation-name: reveal-out;
}
::view-transition-new(root) {
  animation-name: reveal-in;
}

@property --rotation {
  syntax: "<angle>";
  inherits: false;
  initial-value: 0deg;
}
@property --scale {
  syntax: "<number>";
  inherits: false;
  initial-value: 1;
}

@keyframes reveal-in {
  from {
    --rotation: -90deg;
    animation-timing-function: ease-in-out;
  }
  15% {
    --scale: 0.8;
    --rotation: -90deg;
  }
  85% {
    --scale: 0.8;
    --rotation: 0deg;
    animation-timing-function: ease-in-out;
  }
  to {
    --rotation: 0deg;
  }
}
@keyframes reveal-out {
  from {
    --rotation: 0deg;
    animation-timing-function: ease-in-out;
  }
  15% {
    --scale: 0.8;
    --rotation: 0deg;
  }
  85% {
    --scale: 0.8;
    --rotation: 90deg;
    animation-timing-function: ease-in-out;
  }
  to {
    --rotation: 90deg;
  }
}

body,
html {
  color: var(--text-color);
  letter-spacing: var(--letter-space-content);
  background: var(--base-color);
  scroll-behavior: smooth;
}

body {
  font-size: var(--step--1);
  font-family: var(--font-primary), sans-serif;
  font-style: normal;
  font-weight: normal;

  background-image: var(--bg-image);
  background-size: cover;
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
}

body>* {
  /* Ensure all direct children of body are treated as containers */
  container-type: inline-size;
  margin-inline: auto;
  position: relative;
}

/* Make sure your main content is above the background */

.wrapper,
header,
main,
section {
  position: relative;
  z-index: 2000;
  background-color: transparent;
}

.wrapper {
  /*padding-block: var(--padding-block);*/
  min-height: 100dvh;
  padding-inline: var(--padding-inline);
}

/*------header-------*/

header {
  z-index: 2000;
  user-select: none;
  margin-inline: auto;
}

.header-text {
  margin-top: var(--space-2xs);
  text-align: center;
  margin-inline: auto;
}

.header-text .title {
  display: inline-block;
  user-select: none;
}

/* Theme switcher styles */
.theme-switcher {
  position: absolute;
  top: 0;
  right: var(--space-2xs);
  display: flex;
  flex-direction: row;
  z-index: 2000;
  pointer-events: all;
  user-select: none;
  gap: var(--space-2xs);
  background-color: none;
  opacity: 1;
  transition: opacity 0.3s ease-in-out;
  box-shadow: var(--shadow);
  border-radius: var(--btn-border-radius);
}

.theme-button {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  z-index: 2500;
  user-select: none;
  background: none;
  opacity: 1;
  color: var(--text-color);
  transition: opacity 0.3s ease-in-out;
  pointer-events: all;
  box-shadow: var(--shadow);
}

.theme-button.active {
  display: none;
}

.theme-button:not(.active) {
  display: block;
  opacity: 1;
  pointer-events: all;
  transition: opacity 0.3s ease-in-out;
  background-color: transparent;
  color: var(--text-color);
  border: none;
  border-radius: var(--btn-border-radius);
  user-select: none;
  cursor: pointer;
  box-shadow: var(--shadow);
}

.theme-button input[type="radio"] {
  display: none;
}

.theme-button svg {
  width: var(--space-m);
  height: var(--space-m);
  color: var(--text-color);
  opacity: 1;
  display: inline-block;
  transition: transform 0.1s, color 0.3s, background-color 0.3s;
  /* Add this line */
  user-select: none;
  pointer-events: none;
  /* Prevents SVG from capturing pointer events */
  box-shadow: var(--shadow);
}

.theme-button:hover svg {
  transform: scale(0.6) rotate(90deg);
  transition: transform 0.1s, color 0.3s, background-color 0.3s;
  color: var(--text-span);
  background-color: none;
}

/*-------------curvature-----------------*/

.curve-container {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: var(--space-3xl);
  margin-top: var(--space-2xl);
}

.content {
  display: flex;
  align-items: center;
  justify-content: center;
  position: relative;
  width: 90vmin;
}

.content div {
  position: absolute;
  display: flex;
  animation: show-hide var(--sp) ease 0s infinite;
  mix-blend-mode: plus-lighter;
}

@keyframes show-hide {
  0%,
  100% {
    opacity: 0;
    transform: scale(0.7);
  }
  20%,
  80% {
    opacity: 1;
    transform: scale(1.4);
  }
}

.content div span {
  width: 7vmin;
  position: relative;
  text-align: center;
  box-sizing: border-box;
  color: var(--text-color);
  font-size: var(--step-2);
}

.content-1 {
  display: flex;
  align-items: center;
  justify-content: center;
  position: relative;
  width: 90vmin;
}

.content-1 div {
  position: absolute;
  display: flex;
  animation: show-hide var(--sp) ease 0s infinite;
  mix-blend-mode: plus-lighter;
}
/* ... */

